# software_trelicas_mec

./: CAD.py  README.md  exemplo.txt  front_teste.py  pyproject.toml
quadro_interativo/: mec.py  mec.txt  nos.html  quadro.py  relatorio.txt  temp_trelica (1).txt  teste_html.html  teste_html.py  web.py
