[project]
name = "software-trelicas"
version = "0.1.0"
description = ""
authors = [
    {name = "luanmtt",email = "luanmottacosta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "anastruct[plot] (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
